# python-mass-transit-billing-example

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml  run_argument_example.bat
.old/: main.py
docs/: .checks
example/example_data/: journey_data.csv  zone_map.csv
example_data/: output.csv
libs/: included_tools.py
src/: config.ini  main.py  main_with_pandas.py
src/models/: calculator.py  validators.py
